update catalog functionality with streams information

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,86 @@
+# Stremio HU Live Movies - Environment Configuration
+# Copy this file to .env and fill in your values
+
+# ========================================
+# Server Configuration
+# ========================================
 PORT=7000
 TZ=Europe/Budapest
+LOG_LEVEL=info
+
+# ========================================
+# Caching & Scraping
+# ========================================
 CACHE_TTL_MIN=10
 SCRAPE_RATE_MS=30000
-LOG_LEVEL=info
+
+# ========================================
+# Stream URLs - Hungarian TV Channels
+# ========================================
+# Configure stream URLs for channels you want to support.
+# Leave blank or omit for channels you don't have streams for.
+#
+# Supported formats:
+#  - HLS (M3U8): https://example.com/stream.m3u8
+#  - MPEG-DASH: https://example.com/stream.mpd  
+#  - Direct MP4: https://example.com/video.mp4
+#
+# See docs/STREAM_CONFIGURATION.md for detailed setup instructions
+
+# Public Channels
+STREAM_M1=
+STREAM_M2=
+STREAM_M4_SPORT=
+STREAM_M5=
+STREAM_DUNA=
+STREAM_DUNA_WORLD=
+
+# Commercial Channels
+STREAM_RTL=
+STREAM_RTL2=
+STREAM_RTL_KLUB=
+STREAM_TV2=
+STREAM_SUPER_TV2=
+STREAM_COOL=
+
+# Movie Channels
+STREAM_FILM=
+STREAM_FILMPLUS=
+STREAM_FILM4=
+STREAM_HBO=
+STREAM_HBO2=
+STREAM_HBO3=
+STREAM_CINEMAX=
+STREAM_CINEMAX2=
+STREAM_AMC=
+STREAM_AMC_HD=
+STREAM_PARAMOUNT=
+STREAM_COMEDY_CENTRAL=
+STREAM_PARAMOUNT_CHANNEL=
+
+# International Channels (Hungarian dub/sub)
+STREAM_AXN=
+STREAM_SONY=
+STREAM_UNIVERSAL=
+STREAM_PRIMA_PLUS=
+STREAM_PRIME=
+
+# Other Channels
+STREAM_VIASAT3=
+STREAM_VIASAT6=
+
+# ========================================
+# Example Configuration (UNCOMMENT AND EDIT)
+# ========================================
+# STREAM_RTL=https://your-iptv-provider.com/rtl/index.m3u8
+# STREAM_TV2=https://your-iptv-provider.com/tv2/index.m3u8
+# STREAM_AMC_HD=https://your-iptv-provider.com/amc-hd/index.m3u8
+# STREAM_HBO=https://your-iptv-provider.com/hbo/index.m3u8
+
+# ========================================
+# Security Notes
+# ========================================
+# - NEVER commit .env file with real stream URLs to version control
+# - Add .env to .gitignore (already configured)
+# - Use different URLs for different environments (dev/staging/prod)
+# - Ensure you have legal rights to use these streams
