add imdb lookup

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,21 @@ CACHE_TTL_MIN=10
 SCRAPE_RATE_MS=30000
 
 # ========================================
+# IMDb Lookup Configuration (Optional)
+# ========================================
+# Get your free API key from: https://www.themoviedb.org/settings/api
+# Sign up at: https://www.themoviedb.org/signup
+#
+# This enables better integration with stream provider addons like Torrentio
+# by matching Hungarian TV movies to their IMDb IDs.
+#
+# Leave TMDB_API_KEY empty to disable IMDb lookup (addon still works)
+TMDB_API_KEY=
+IMDB_LOOKUP_ENABLED=true
+IMDB_CACHE_TTL_DAYS=7
+IMDB_RATE_LIMIT_PER_SEC=40
+
+# ========================================
 # Stream URLs - Hungarian TV Channels
 # ========================================
 # Configure stream URLs for channels you want to support.
