--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,10 @@ cachetools==5.5.0
 pydantic==2.9.2
 python-dotenv==1.0.1
 rich==13.7.1  # Rich logging and console output
+aiohttp==3.9.5  # Async HTTP client for TMDB API
+
+# Development/Testing dependencies (optional)
+pytest==7.4.3
+pytest-asyncio==0.21.1
+pytest-cov==4.1.0
+
