--- a/.env.example
+++ b/.env.example
@@ -15,87 +15,31 @@ CACHE_TTL_MIN=10
 SCRAPE_RATE_MS=30000
 
 # ========================================
-# IMDb Lookup Configuration (Optional)
+# IMDb Lookup Configuration (Recommended)
 # ========================================
 # Get your free API key from: https://www.themoviedb.org/settings/api
 # Sign up at: https://www.themoviedb.org/signup
 #
-# This enables better integration with stream provider addons like Torrentio
+# This enables better integration with stream provider addons (Torrentio, etc.)
 # by matching Hungarian TV movies to their IMDb IDs.
 #
-# Leave TMDB_API_KEY empty to disable IMDb lookup (addon still works)
+# With IMDb lookup:
+#   Hungarian TV listing → IMDb ID → Torrentio provides HD torrents ✅
+#
+# Without IMDb lookup:
+#   Addon still works, but stream addons won't recognize movies
+#
+# Leave TMDB_API_KEY empty to disable IMDb lookup
 TMDB_API_KEY=
 IMDB_LOOKUP_ENABLED=true
 IMDB_CACHE_TTL_DAYS=7
 IMDB_RATE_LIMIT_PER_SEC=40
 
 # ========================================
-# Stream URLs - Hungarian TV Channels
+# Alternative: TMDB Bearer Token (JWT)
 # ========================================
-# Configure stream URLs for channels you want to support.
-# Leave blank or omit for channels you don't have streams for.
+# If you have a TMDB Bearer token instead of an API key, use this:
+# TMDB_BEARER_TOKEN=eyJhbGci...your_jwt_token_here
 #
-# Supported formats:
-#  - HLS (M3U8): https://example.com/stream.m3u8
-#  - MPEG-DASH: https://example.com/stream.mpd  
-#  - Direct MP4: https://example.com/video.mp4
-#
-# See docs/STREAM_CONFIGURATION.md for detailed setup instructions
-
-# Public Channels
-STREAM_M1=
-STREAM_M2=
-STREAM_M4_SPORT=
-STREAM_M5=
-STREAM_DUNA=
-STREAM_DUNA_WORLD=
-
-# Commercial Channels
-STREAM_RTL=
-STREAM_RTL2=
-STREAM_RTL_KLUB=
-STREAM_TV2=
-STREAM_SUPER_TV2=
-STREAM_COOL=
-
-# Movie Channels
-STREAM_FILM=
-STREAM_FILMPLUS=
-STREAM_FILM4=
-STREAM_HBO=
-STREAM_HBO2=
-STREAM_HBO3=
-STREAM_CINEMAX=
-STREAM_CINEMAX2=
-STREAM_AMC=
-STREAM_AMC_HD=
-STREAM_PARAMOUNT=
-STREAM_COMEDY_CENTRAL=
-STREAM_PARAMOUNT_CHANNEL=
-
-# International Channels (Hungarian dub/sub)
-STREAM_AXN=
-STREAM_SONY=
-STREAM_UNIVERSAL=
-STREAM_PRIMA_PLUS=
-STREAM_PRIME=
-
-# Other Channels
-STREAM_VIASAT3=
-STREAM_VIASAT6=
-
-# ========================================
-# Example Configuration (UNCOMMENT AND EDIT)
-# ========================================
-# STREAM_RTL=https://your-iptv-provider.com/rtl/index.m3u8
-# STREAM_TV2=https://your-iptv-provider.com/tv2/index.m3u8
-# STREAM_AMC_HD=https://your-iptv-provider.com/amc-hd/index.m3u8
-# STREAM_HBO=https://your-iptv-provider.com/hbo/index.m3u8
-
-# ========================================
-# Security Notes
-# ========================================
-# - NEVER commit .env file with real stream URLs to version control
-# - Add .env to .gitignore (already configured)
-# - Use different URLs for different environments (dev/staging/prod)
-# - Ensure you have legal rights to use these streams
+# Get it from: https://www.themoviedb.org/settings/api
+# Section: "API Read Access Token (v4 auth)"
